# iYidden-Commander

./: .gitignore  CLAUDE.md  README.md
agent/: .env.example  pyproject.toml
agent/src/agent/: config.py  main.py
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: make_device_token.py  make_mashpia_token.py  smoke_ws.py
backend/src/iyidden_backend/: config.py  deps.py  logging_setup.py  main.py
backend/src/iyidden_backend/auth/: __init__.py  jwt.py  passwords.py  tokens.py
backend/src/iyidden_backend/llm/: __init__.py  client.py
backend/src/iyidden_backend/models/: __init__.py  wire.py
backend/src/iyidden_backend/routes/: auth.py  health.py  lanes.py  mashpia.py
backend/src/iyidden_backend/state/: agents.py  db.py  lanes.py
backend/src/iyidden_backend/ws/: agent.py  phone.py
backend/tests/: conftest.py  test_auth.py  test_lane_store.py  test_routes.py
docs/: SPEC.md  protocol.md
