[project]
name = "iyidden-agent"
version = "0.1.0"
description = "iYidden Commander agent — runs on dev machine, reports tmux/Claude Code activity to backend"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
