[project]
name = "iyidden-backend"
version = "0.1.0"
description = "iYidden Commander backend — rendezvous between dev-machine agent and phone"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "anthropic>=0.40",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-jose>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iyidden_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
